--- a/app/.env
+++ b/app/.env
@@ -15,14 +15,18 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=2a234450777e18fffa14d15fd512aa52
+APP_SECRET=8a79464cce79f99fee3cda020f8963fe
 ###< symfony/framework-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://user:secret@mysql8-service:3306/symfony?serverVersion=8.0.27"
+DATABASE_URL="mysql://root:secret@mysql8-service:3306/symfony?serverVersion=8.0.27"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
