--- a/app/Makefile
+++ b/app/Makefile
@@ -1,5 +1,13 @@
 SHELL := /bin/bash
 
+init:
+	composer install -n
+	symfony console doctrine:database:drop --force || true
+	symfony console doctrine:database:create
+	symfony console doctrine:migrations:migrate -n
+	symfony console doctrine:fixtures:load -n
+.PHONY: init
+
 tests: export APP_ENV=test
 tests:
 	symfony console doctrine:database:drop --force || true
